2005-03-26  Alex Roitman  <shura@gramps-project.org>
	* src/RelLib.py (Source.replace_source_references): Add method.
	* src/MergeData.py (MergeSources.merge): Use new handle replacement.

2005-03-26  Don Allingham  <don@gramps-project.org>
	* src/MergeData.py: Add interface support for parents/family merging

2005-03-26  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/plugins/Check.py: Add check for child handle in family, that
	does no longer exist in database

	* src/plugins/Check.py (check_parent_relationships): typo
	
	* src/plugins/Check.py (check_parent_relationships): Catch some more
	database errors. Messages in the report still need some work.
	* src/plugins/TestcaseGenerator.py: New plugin that creates some of
	the errors that crashed Check.py before.
	

2005-03-25  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/ScratchPad.py (ScratchPadWindow): moved content of pad to a 
	class attribute so that it is preserved when the pad is closed.
	* src/ScratchPad.py (add_itself_to_menu, remove_itself_from_menu):
	removed large section of commented code.

2005-03-25  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/Sources.py: converted to use DdTargets.py
	* src/FamilyView.py: converted to use DdTargets.py
	* src/EditPerson.py: converted to use DdTargets.py
	* src/EditPlace.py: converted to use DdTargets.py
	* src/Marriage.py: converted to use DdTargets.py
	* src/DdTargets.py: added targets for FAMILY_EVENT, FAMILY_ATTRIBUTE,
	CHILD and SPOUSE
	
2005-03-24  Don Allingham  <don@gramps-project.org>
	* src/EventEdit.py: Display error message if event type not specified.
	* src/gramps_main.py: fix merge callback

2005-03-24  Alex Roitman  <shura@gramps-project.org>
	* src/RelLib.py (Witness.__init__): Typo.
	* src/plugins/Check.py (cleanup_missing_photos): Use new mediaref
	detection/removal, icons, window management.
	* src/plugins/summary.glade: non-modal dialog.
	* src/plugins/Verify.py (VerifyResults): Use title once.
