@@ -1,3 +1,12 @@
+2005-03-27  Alex Roitman  <shura@gramps-project.org>
+	* src/MergeData.py: Files for places and sources.
+	* src/PlaceView.py (build_context_menu): Typo.
+	* src/SourceView.py (__init__,build_tree): Allow multiple,
+	selections; (merge): Add placeholder method (borrowed from places,
+	needs work.
+	* src/gramps_main.py (on_views_switch_page): Enable merge button;
+	(on_merge_activate): Call merge for sources.
+
 2005-03-26  Alex Roitman  <shura@gramps-project.org>
 	* src/RelLib.py (Source.replace_source_references): Add method.
 	* src/MergeData.py (MergeSources.merge): Use new handle replacement.
